# mac-explorer

./: .gitignore  AGENTS.md  BACKEND_TODO.md  CLAUDE.md  GEMINI.md  README.md  計画書.md
xplorer/: .gitignore  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.ts  vitest.setup.ts
xplorer/src/: App.tsx
xplorer/src-tauri/: Cargo.toml  tauri.conf.json
xplorer/src-tauri/capabilities/: default.json
xplorer/src-tauri/src/: lib.rs  main.rs
xplorer/src-tauri/src/commands/: archive.rs  archive_core.rs  directory.rs  file_ops.rs  filesystem.rs  filesystem_tests.rs  icons.rs  ipc.rs  mod.rs  properties.rs  settings.rs  types.rs  utils.rs  volumes.rs  watcher.rs
xplorer/src-tauri/src/utils/: macos_ls.rs  mod.rs
xplorer/src-tauri/tests/: archive_tests.rs  directory_tests.rs  file_operations_tests.rs  format_tests.rs  icons_tests.rs  integration_tests.rs  macos_ls_tests.rs  properties_tests.rs  test_utils.rs  unit_tests.rs  utils_tests.rs  volumes_tests.rs  watcher_tests.rs
xplorer/src/components/: ContextMenu.tsx  DetailsPane.tsx  ExtractPromptDialog.tsx  MainPane.tsx  NavigationBar.tsx  OverwriteConfirmDialog.tsx  ProgressDialog.tsx  ProgressWindow.tsx  PropertiesDialog.tsx  SidePanel.tsx  StatusBar.tsx  TitleBar.tsx  Toolbar.tsx
xplorer/src/hooks/: useFileOperations.ts  useFileSelection.ts  useFileSystem.ts  useNavigationBar.ts  useProgress.ts
xplorer/src/services/: ipc.ts
xplorer/src/stores/: appStore.test.ts  appStore.ts  settingsStore.ts
xplorer/src/styles/: App.module.css  global.css  variables.css
xplorer/src/types/: app-state.ts  (+3 more)
(+64 files in other folders)
