[package]
name = "xplorer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "xplorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "rt-multi-thread", "macros", "fs"] }
notify = "6"
trash = "5"
mime_guess = "2"
image = "0.25"
walkdir = "2"
glob = "0.3"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.6.0"
libc = "0.2"
tauri-plugin-log = "2.8.0"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.26.0"

